# Fitness-RAG

./: .dockerignore  .env.example  .gitignore  AI_WORKFLOW.md  Dockerfile  EVALUATION.md  PLAN.md  README.md  docker-compose.yml  evaluation-results.json  evaluation-test-set.json  pyproject.toml
app/: __init__.py
app/agent/: __init__.py  models.py  orchestrator.py  prompting.py  tools.py
app/analysis/: __init__.py  aggregation.py  constants.py  history.py  insight.py  models.py  normalization.py  processing.py  prompting.py  sessions.py  summary.py  trend_metrics.py  trends.py  utils.py
app/api/: __init__.py  main.py  routes_agent.py  routes_analysis.py  routes_health.py  routes_rag.py
app/core/: ai.py  chroma.py  config.py
app/eval/: __init__.py  metrics.py  run_eval.py  test_set.py
app/rag/: __init__.py  chunking.py  documents.py  guardrail_prompting.py  guardrails.py  ingest.py  models.py  prompting.py  retrieve.py  tokenization.py  vector_store.py
tests/: test_agent.py  test_analysis_history.py  test_analysis_insight.py  test_analysis_processing.py  test_api.py  test_eval.py  test_guardrails.py  test_ingest.py  test_rag_providers.py  test_retrieve.py
