[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness-rag"
version = "0.1.0"
description = "AI Workout Coach API"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.4,<5",
    "chromadb-client==1.5.9",
    "fastapi>=0.115,<1",
    "openai>=1.68,<2",
    "pydantic-settings>=2.7,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
